# tablelinker-lib

./: .gitignore  README.md  pyproject.toml  sample.py
docs/: api.rst  as_command.rst  as_library.rst  conf.py  convertor.rst  index.rst  install.rst  quick_start.rst  requirements.txt
sample/datafiles/: 2311.xlsx  bunkyoku_metadata.xlsx  hachijo_sightseeing.csv  hachijo_sightseeing.xlsx  katsushika_tourism.csv  ma030000.csv  major_results_2020.csv  major_results_2020.xlsx  onsen.csv  shimabara_tourism.csv  yanai_tourism.csv  yanai_tourism_sjis.csv  yanai_tourism_tsv.txt  【さいたま市】AED設置場所一覧.csv  国立博物館展示催事.csv  火山被害.csv
sample/taskfiles/: calc.json  census2020.json  concat_col.json  delete_col.json  delete_cols.json  delete_row.json  insert_col.json  insert_cols.json  mapping_cols.json  move_col.json  rename_col.json  rename_cols.json  reorder_cols.json  select_row.json  select_string_contains.json  split_col.json  split_row.json  task.json  task1.json  task2.json  task3.json  task4.json
tablelinker/: __init__.py  __main__.py  cli.py
tablelinker/convertors/basics/: calc_col.py  concat_col.py  (+15 more)
tablelinker/core/: __init__.py  context.py  convertors.py  csv_cleaner.py  data_type.py  date_extractor.py  fieldtypes.py  input.py  mapping.py  output.py  params.py  table.py  task.py  validators.py
templates/: xxxxxx_aed.csv  xxxxxx_care_service.csv  xxxxxx_cultural_property.csv  xxxxxx_evacuation_space.csv  xxxxxx_event.csv  xxxxxx_fire_hydrant.csv  xxxxxx_food_business_all.csv  xxxxxx_hospital.csv  xxxxxx_open_data_list.csv  xxxxxx_population_yyyymmdd.csv  xxxxxx_preschool.csv  xxxxxx_public_facility.csv  xxxxxx_public_toilet.csv  xxxxxx_public_wireless_lan.csv  xxxxxx_tourism.csv
tests/: conftest.py  test_basic_convertors.py  test_extra_convertors.py  test_file_ios.py
(+6 files in other folders)
