[tool.poetry]
name = "tablelinker"
version = "1.0.0"
description = "A library of processes for manipulating tabular data in CSV format"
authors = ["Akiko Aizawa <akiko@nii.ac.jp>"]
readme = "README.md"
maintainers = ["Takeshi Sagara <sagara@info-proto.com>"]
repository = "https://github.com/KMCS-NII/tablelinker-lib"
documentation = "https://www2.info-proto.com/tablelinker/"
keywords = ["CSV", "tabular", "manipulation", "cleansing"]
packages = [{include = "tablelinker"}]
classifiers = [
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]


[tool.poetry.dependencies]
python = ">=3.8.1,<3.11.0"
jeraconv = "^0.2.1"
jageocoder = "^1.4.0"
requests = "^2.28.1"
pandas = "^1.5.2"
munkres = "^1.1.4"
transformers = "^4.25.1"
fugashi = "^1.2.1"
torch = "^1.13.1"
install = "^1.3.5"
ipadic = "^1.0.0"
docopt = "^0.6.2"
jaconv = "^0.3.3"
openpyxl = "^3.0.10"
charset-normalizer = "^3.0.1"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.0"
Sphinx = "<6"
sphinx-rtd-theme = "^1.1.1"
pytest = "^7.2.1"
sphinxcontrib-napoleon = "^0.7"
twine = "^4.0.2"
polars = "^0.16.5"
autopep8 = "^1.0.0"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests/",
    "tablelinker/tests",
    "tablelinker/convertors",
    "tablelinker/core/table.py",
    "tablelinker/core/task.py",
    "docs/as_library.rst"
]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
tablelinker = "tablelinker.cli:main"
